src/objects/Stakeholder__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS_ID_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPS ID 1</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <label>Stakeholder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>